@@ -10,6 +10,9 @@
 #include <unistd.h>
 #endif
 
+/* zlib */
+#include "zlib.h"
+
 #ifndef WIN32
 int mrt_getch()
 {
@@ -218,4 +221,45 @@ char* get_filename(const char* filepath)
 		append_string(&result, pos+1);
 
 	return result;	
+}
+
+static void clear_callback(struct parse_callback_data* pcd)
+{
+	if( pcd->type == ENTRY_FILE ) {
+		remove(pcd->fullname);
+	}
+	else if( pcd->type == ENTRY_DIR_END ) {
+		int delete_root = 1;
+		parse_directory(pcd->fullname, 0, clear_callback, (void*)&delete_root);
+	}
+	else if( pcd->type == ENTRY_END ) {
+		int* delete_root = (int*)pcd->user_data;
+		if( *delete_root )
+			rmdir(pcd->dirname);
+	}
+}
+
+void clear_directory(const char* dirname, int delete_root)
+{
+	parse_directory(dirname, 0, clear_callback, (void*)&delete_root);
+
+	if( delete_root )
+		rmdir(dirname);
+}
+
+void calc_crc32(const char* file, unsigned int* crc)
+{
+	char buffer[1024];
+	FILE* fd = fopen(file, "rb");
+	if( !fd )
+		return;
+
+	size_t bytesread;
+	*crc = crc32(0L, Z_NULL, 0);
+	while( (bytesread = fread(buffer, 1, 1024, fd)) != 0 ) {
+		*crc = crc32(*crc, (const Bytef*)buffer, bytesread);
+	}
+
+	fclose(fd);
+	fd = NULL;
 }
